# FMP_music_player

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
